2014-12-07  Christophe Lyon  <christophe.lyon@linaro.org>

	* gcc.target/aarch64/advsimd-intrinsics/vaddhn.c: Actually execute
	the test.
	* gcc.target/aarch64/advsimd-intrinsics/vaddl.c: Actually execute
	the test. Fix expected output.
	* gcc.target/aarch64/advsimd-intrinsics/vaddw.c: Likewise.

2014-12-07  Jan Hubicka  <hubicka@ucw.cz>

	* gcc.dg/addr_equal-1.c: New testcase.

2014-12-06  James Greenhalgh  <james.greenhalgh@arm.com>
	    Sebastian Pop  <s.pop@samsung.com>
	    Brian Rzycki  <b.rzycki@samsung.com>

	PR tree-optimization/54742
	* gcc.dg/tree-ssa/ssa-dom-thread-6.c: New test.
	* gcc.dg/tree-ssa/ssa-dom-thread-7.c: New test.

2014-12-06  Marek Polacek  <polacek@redhat.com>

	PR tree-optimization/64183
	* gcc.dg/tree-ssa/pr64183.c: New test.

2014-12-06  H.J. Lu  <hongjiu.lu@intel.com>

	PR target/64200
	* gcc.target/i386/memcpy-strategy-4.c: New test.

2014-12-05  Jakub Jelinek  <jakub@redhat.com>

	PR sanitizer/64170
	* gcc.dg/asan/pr64170.c: New test.

2014-12-05  Michael Meissner  <meissner@linux.vnet.ibm.com>

	PR target/53199
	* gcc.target/powerpc/pr53199.c: Limit tests to 64-bit.

2014-12-05  Bin Cheng  <bin.cheng@arm.com>

	* gcc.target/aarch64/ldp_stp_1.c: New test.
	* gcc.target/aarch64/ldp_stp_2.c: New test.
	* gcc.target/aarch64/ldp_stp_3.c: New test.
	* gcc.target/aarch64/ldp_stp_4.c: New test.
	* gcc.target/aarch64/ldp_stp_5.c: New test.
	* gcc.target/aarch64/lr_free_1.c: Disable scheduling fusion
	and peephole2 pass.

2014-12-05  Sandra Loosemore  <sandra@codesourcery.com>

	* gcc.dg/vect/pr63341-1.c: Remove explicit "dg-do run".
	* gcc.dg/vect/pr63341-2.c: Likewise.
	* gcc.dg/vect/pr63379.c: Likewise.
	* gcc.dg/vect/pr63605.c: Likewise.

2014-12-05  Andre Vehreschild  <vehre@gmx.de>

	PR fortran/60414
	* gfortran.dg/unlimited_polymorphism_18.f90: New test.

2014-12-05  Ilya Enkovich  <ilya.enkovich@intel.com>

	PR target/64056
	* lib/target-supports.exp (check_effective_target_stpcpy): New.